--- a/src/templates/datagrid.latte
+++ b/src/templates/datagrid.latte
@@ -333,12 +333,14 @@
 						{/foreach}
 						<th n:if="$actions || $control->isSortable() || $itemsDetail || $inlineEdit || $inlineAdd" class="col-action text-center" width="{if $cnt_thead <= 1}5%{elseif $cnt_thead === 2}10%{else}15%{/if}">
 							{if !$control->hasAutoSubmit() && !$control->hasOuterFilterRendering()}
+							<div class="d-flex">
 								{snippet outerFilterResetButton}
-                                <a n:if="$filter_active && $useSecondarySearchResetButton" n:href="resetFilter!" title="{='ublaboo_datagrid.reset_filter'|translate}" class="ajax btn btn-danger btn-xs reset-filter d-flex align-items-center me-2">
+                                <a n:if="$filter_active && $useSecondarySearchResetButton" n:href="resetFilter!" title="{='ublaboo_datagrid.reset_filter'|translate}" class="ajax btn btn-danger btn-sm reset-filter h-100 py-0 mr-2">
                                     <i class="{$iconPrefix}undo fa-fw"></i>
                                 </a>
                                 {/snippet}
 								{input $filter['filter']['submit']}
+							</div>
 							{/if}
 						</th>
 					</tr>
