--- a/src/templates/datagrid.latte
+++ b/src/templates/datagrid.latte
@@ -335,7 +335,7 @@
 							{if !$control->hasAutoSubmit() && !$control->hasOuterFilterRendering()}
 							<div class="d-flex">
 								{snippet outerFilterResetButton}
-                                <a n:if="$filter_active && $useSecondarySearchResetButton" n:href="resetFilter!" title="{='ublaboo_datagrid.reset_filter'|translate}" class="ajax btn btn-danger btn-sm reset-filter h-100 py-0 mr-2">
+                                <a n:if="$filter_active && $useSecondarySearchResetButton" n:href="resetFilter!" title="{='ublaboo_datagrid.reset_filter'|translate}" class="ajax btn btn-danger btn-sm reset-filter justify-text-center d-flex justify-content-center align-items-center h-100 py-0 me-1">
                                     <i class="{$iconPrefix}undo fa-fw"></i>
                                 </a>
                                 {/snippet}
