--- a/src/templates/b4/datagrid.latte
+++ b/src/templates/b4/datagrid.latte
@@ -556,9 +556,9 @@
 											<a n:if="$show_default_sort_button" n:href="defaultSort!" class="ajax btn btn-primary btn-xs default-sort d-flex align-items-center mr-2" title="{='ublaboo_datagrid.default_sort'|translate}">
 												<i class="{$iconPrefix}sort fa-fw"></i>
 											</a>
-											{*<a n:if="$filter_active" n:href="resetFilter!" class="ajax btn btn-danger btn-xs reset-filter d-flex align-items-center mr-2" title="{='ublaboo_datagrid.reset_filter'|translate}">
+											<a n:if="$filter_active" n:href="resetFilter!" class="ajax btn btn-danger btn-xs reset-filter d-flex align-items-center mr-2" title="{='ublaboo_datagrid.reset_filter'|translate}">
 												<i class="{$iconPrefix}undo fa-fw"></i>
-											</a>*}
+											</a>
 											{if $control->isPaginated()}
 												{input $filter['perPage'], data-autosubmit-per-page => $control->hasAutoSubmit(), class => 'input-sm form-select pl-2'}
 												{if !$control->hasAutoSubmit()}
