--- a/src/templates/datagrid.latte
+++ b/src/templates/datagrid.latte
@@ -145,7 +145,7 @@
 					</div>
 				{/block}
 			{/if}
-			<table class="{block table-class}table table-hover table-striped table-bordered table-sm text-break{/block}" n:snippet="table" n:block="data">
+			<table class="{block table-class}table table-hover table-striped table-bordered table-sm{/block}" n:snippet="table" n:block="data">
 				<thead n:block="header">
 
                     {php $cnt_thead = 0}
@@ -447,7 +447,7 @@
                                                 {/foreach}
                                                 <div class="col-auto" n:if="$control->isSortable()">
                                                     <span class="handle-sort">
-                                                        <a class="btn btn-sm">
+                                                        <a class="btn btn-sm p-0 rounded-0">
                                                             <i n:block="icon-arrows-v" class="fa-fw {$iconPrefix}arrows-v"></i>
                                                         </a>
                                                     </span>
