--- a/src/templates/b3/datagrid.latte
+++ b/src/templates/b3/datagrid.latte
@@ -17,7 +17,7 @@
 <div class="{block datagrid-class}datagrid datagrid-{$control->getFullName()}{/block}" data-refresh-state="{link refreshState!}">
 	<div n:snippet="grid">
 	{snippetArea gridSnippets}
-		{form filter, class => 'ajax'}
+		{form filter, class => 'ajax', autocomplete => 'off'}
 			{if $control->hasOuterFilterRendering()}
 				{block outer-filters}
 					<div class="row text-right datagrid-collapse-filters-button-row" n:if="$control->hasCollapsibleOuterFilters()">
