--- a/src/templates/datagrid.latte
+++ b/src/templates/datagrid.latte
@@ -145,7 +145,7 @@
 					</div>
 				{/block}
 			{/if}
-			<div class="bg-danger table-responsive">
+			<div class="table-responsive">
 			<table class="{block table-class}table table-hover table-striped table-bordered table-sm{/block}" n:snippet="table" n:block="data">
 				<thead n:block="header">
                     {php $cnt_thead = 0}
